# scratchpad

neon-pulse-pong/: README.md  index.html  main.js  styles.css
palacescope/: .gitignore  README.md
palacescope/backend/: pyproject.toml
palacescope/backend/app/: data_loader.py  event_bus.py  main.py  models.py
palacescope/backend/data/: sample_palace.json
palacescope/frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
palacescope/frontend/src/: App.css  App.tsx  index.css  main.tsx
palacescope/frontend/src/components/: Overlay.tsx  PalaceScene.tsx
palacescope/frontend/src/hooks/: usePalaceData.ts
palacescope/frontend/src/lib/: api.ts
palacescope/frontend/src/types/: palace.ts
tapestry-os/: README.md
tapestry-os/docs/architecture/: blueprint.md  data-model.md
tapestry-os/docs/experience/: rituals.md
tapestry-os/docs/vision/: ethics-charter.md  north-star.md
tapestry-os/prototype/weaver-journal/: index.html  main.js  styles.css
the-best-software-in-the-world/: README.md
the-best-software-in-the-world/architecture/: system.md
the-best-software-in-the-world/experience/: manifesto.md
the-best-software-in-the-world/prototype/conversations/: index.html  package.json  tailwind.config.js  vite.config.js
the-best-software-in-the-world/prototype/conversations/src/: App.jsx  main.jsx  styles.css
the-best-software-in-the-world/vision/: north-star.md
