[project]
name = "palacescope-backend"
version = "0.1.0"
description = "Real-time palace hierarchy API for MemPalace visualization"
authors = ["Lumen <ops@raabkwak.com>"]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "chromadb>=0.4.24",
  "python-dotenv>=1.0",
  "watchfiles>=0.21"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "httpx>=0.27"
]

[tool.uv]
package = true
